Fix visibility of red texts

--- a/src/index.css
+++ b/src/index.css
@@ -116,7 +116,7 @@ All colors MUST be HSL.
     --accent: 126 100% 65%;
     --accent-foreground: 0 0% 15%;
 
-    --destructive: 0 62.8% 30.6%;
+    --destructive: 0 84% 60%;
     --destructive-foreground: 0 0% 98%;
 
     --border: 0 0% 20%;
